sourceControlApp/querying/SourceControlParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .SourceControlListener import SourceControlListener
else:
    from SourceControlListener import SourceControlListener

class SourceControlParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__18=1
    T__17=2
    T__16=3
    T__15=4
    T__14=5
    T__13=6
    T__12=7
    T__11=8
    T__10=9
    T__9=10
    T__8=11
    T__7=12
    T__6=13
    T__5=14
    T__4=15
    T__3=16
    T__2=17
    T__1=18
    T__0=19
    INT=20
    STRING=21
    ATTR_NAME=22
    SPACE=23

    tokenNames = [ u"<INVALID>", u"'from'", u"']'", u"'files'", u"'users'", 
                   u"'get'", u"'in'", u"','", u"'['", u"'<'", u"'='", u"'!='", 
                   u"'find'", u"'commits'", u"'>'", u"'branches'", u"'where'", 
                   u"'not in'", u"'count'", u"'contains'", u"INT", u"STRING", 
                   u"ATTR_NAME", u"SPACE" ]

    RULE_command = 0
    RULE_find = 1
    RULE_get = 2
    RULE_count = 3
    RULE_query = 4
    RULE_dataType = 5
    RULE_cond = 6
    RULE_condList = 7
    RULE_getList = 8
    RULE_value = 9
    RULE_attrName = 10
    RULE_valueName = 11
    RULE_vlist = 12
    RULE_comparator = 13

    ruleNames =  [ u"command", u"find", u"get", u"count", u"query", u"dataType", 
                   u"cond", u"condList", u"getList", u"value", u"attrName", 
                   u"valueName", u"vlist", u"comparator" ]

    def __init__(self, input):
        super(SourceControlParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.CommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def find(self):
            return self.getTypedRuleContext(SourceControlParser.FindContext,0)


        def count(self):
            return self.getTypedRuleContext(SourceControlParser.CountContext,0)


        def get(self):
            return self.getTypedRuleContext(SourceControlParser.GetContext,0)


        def getRuleIndex(self):
            return SourceControlParser.RULE_command

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterCommand(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitCommand(self)




    def command(self):

        localctx = SourceControlParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.state = 31
            token = self._input.LA(1)
            if token in [self.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28 
                self.find()

            elif token in [self.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29 
                self.get()

            elif token in [self.T__1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 30 
                self.count()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FindContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.FindContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(SourceControlParser.SPACE, 0)

        def query(self):
            return self.getTypedRuleContext(SourceControlParser.QueryContext,0)


        def getRuleIndex(self):
            return SourceControlParser.RULE_find

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterFind(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitFind(self)




    def find(self):

        localctx = SourceControlParser.FindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_find)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(self.T__7)
            self.state = 34
            self.match(self.SPACE)
            self.state = 35 
            self.query()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.GetContext, self).__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(SourceControlParser.QueryContext,0)


        def getList(self):
            return self.getTypedRuleContext(SourceControlParser.GetListContext,0)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_get

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterGet(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitGet(self)




    def get(self):

        localctx = SourceControlParser.GetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_get)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(self.T__14)
            self.state = 38
            self.match(self.SPACE)
            self.state = 39 
            self.getList()
            self.state = 40
            self.match(self.SPACE)
            self.state = 41
            self.match(self.T__18)
            self.state = 42
            self.match(self.SPACE)
            self.state = 43 
            self.query()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CountContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.CountContext, self).__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(SourceControlParser.QueryContext,0)


        def getList(self):
            return self.getTypedRuleContext(SourceControlParser.GetListContext,0)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_count

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterCount(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitCount(self)




    def count(self):

        localctx = SourceControlParser.CountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_count)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(self.T__1)
            self.state = 46
            self.match(self.SPACE)
            self.state = 52
            _la = self._input.LA(1)
            if _la==SourceControlParser.STRING:
                self.state = 47 
                self.getList()
                self.state = 48
                self.match(self.SPACE)
                self.state = 49
                self.match(self.T__18)
                self.state = 50
                self.match(self.SPACE)


            self.state = 54 
            self.query()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.QueryContext, self).__init__(parent, invokingState)
            self.parser = parser

        def condList(self):
            return self.getTypedRuleContext(SourceControlParser.CondListContext,0)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def dataType(self):
            return self.getTypedRuleContext(SourceControlParser.DataTypeContext,0)


        def getRuleIndex(self):
            return SourceControlParser.RULE_query

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterQuery(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitQuery(self)




    def query(self):

        localctx = SourceControlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56 
            self.dataType()
            self.state = 61
            _la = self._input.LA(1)
            if _la==SourceControlParser.SPACE:
                self.state = 57
                self.match(self.SPACE)
                self.state = 58
                self.match(self.T__3)
                self.state = 59
                self.match(self.SPACE)
                self.state = 60 
                self.condList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.DataTypeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SourceControlParser.RULE_dataType

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterDataType(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = SourceControlParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__16) | (1 << self.T__15) | (1 << self.T__6) | (1 << self.T__4))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.CondContext, self).__init__(parent, invokingState)
            self.parser = parser

        def attrName(self):
            return self.getTypedRuleContext(SourceControlParser.AttrNameContext,0)


        def value(self):
            return self.getTypedRuleContext(SourceControlParser.ValueContext,0)


        def comparator(self):
            return self.getTypedRuleContext(SourceControlParser.ComparatorContext,0)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_cond

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterCond(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitCond(self)




    def cond(self):

        localctx = SourceControlParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65 
            self.attrName()
            self.state = 67
            _la = self._input.LA(1)
            if _la==SourceControlParser.SPACE:
                self.state = 66
                self.match(self.SPACE)


            self.state = 69 
            self.comparator()
            self.state = 71
            _la = self._input.LA(1)
            if _la==SourceControlParser.SPACE:
                self.state = 70
                self.match(self.SPACE)


            self.state = 73 
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.CondListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cond(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SourceControlParser.CondContext)
            else:
                return self.getTypedRuleContext(SourceControlParser.CondContext,i)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_condList

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterCondList(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitCondList(self)




    def condList(self):

        localctx = SourceControlParser.CondListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self.cond()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SourceControlParser.T__12:
                self.state = 76
                self.match(self.T__12)
                self.state = 78
                _la = self._input.LA(1)
                if _la==SourceControlParser.SPACE:
                    self.state = 77
                    self.match(self.SPACE)


                self.state = 80 
                self.cond()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.GetListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def valueName(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SourceControlParser.ValueNameContext)
            else:
                return self.getTypedRuleContext(SourceControlParser.ValueNameContext,i)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_getList

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterGetList(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitGetList(self)




    def getList(self):

        localctx = SourceControlParser.GetListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_getList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86 
            self.valueName()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SourceControlParser.T__12:
                self.state = 87
                self.match(self.T__12)
                self.state = 89
                _la = self._input.LA(1)
                if _la==SourceControlParser.SPACE:
                    self.state = 88
                    self.match(self.SPACE)


                self.state = 91 
                self.valueName()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.ValueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SourceControlParser.INT, 0)

        def vlist(self):
            return self.getTypedRuleContext(SourceControlParser.VlistContext,0)


        def STRING(self):
            return self.getToken(SourceControlParser.STRING, 0)

        def getRuleIndex(self):
            return SourceControlParser.RULE_value

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterValue(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitValue(self)




    def value(self):

        localctx = SourceControlParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        try:
            self.state = 100
            token = self._input.LA(1)
            if token in [self.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(self.INT)

            elif token in [self.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(self.STRING)

            elif token in [self.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99 
                self.vlist()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttrNameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.AttrNameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ATTR_NAME(self):
            return self.getToken(SourceControlParser.ATTR_NAME, 0)

        def getRuleIndex(self):
            return SourceControlParser.RULE_attrName

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterAttrName(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitAttrName(self)




    def attrName(self):

        localctx = SourceControlParser.AttrNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attrName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(self.ATTR_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueNameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.ValueNameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SourceControlParser.STRING, 0)

        def getRuleIndex(self):
            return SourceControlParser.RULE_valueName

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterValueName(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitValueName(self)




    def valueName(self):

        localctx = SourceControlParser.ValueNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(self.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.VlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SourceControlParser.ValueContext)
            else:
                return self.getTypedRuleContext(SourceControlParser.ValueContext,i)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(SourceControlParser.SPACE)
            else:
                return self.getToken(SourceControlParser.SPACE, i)

        def getRuleIndex(self):
            return SourceControlParser.RULE_vlist

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterVlist(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitVlist(self)




    def vlist(self):

        localctx = SourceControlParser.VlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(self.T__11)
            self.state = 107 
            self.value()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SourceControlParser.T__12:
                self.state = 108
                self.match(self.T__12)
                self.state = 110
                _la = self._input.LA(1)
                if _la==SourceControlParser.SPACE:
                    self.state = 109
                    self.match(self.SPACE)


                self.state = 112 
                self.value()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(self.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComparatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SourceControlParser.ComparatorContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SourceControlParser.RULE_comparator

        def enterRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.enterComparator(self)

        def exitRule(self, listener):
            if isinstance( listener, SourceControlListener ):
                listener.exitComparator(self)




    def comparator(self):

        localctx = SourceControlParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__13) | (1 << self.T__10) | (1 << self.T__9) | (1 << self.T__8) | (1 << self.T__5) | (1 << self.T__2) | (1 << self.T__0))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




